# iwaki

./: .gitignore  AUTHORS.md  CMakeLists.txt  README  README.md  soundboard.bat
doc/src/: Bibliography.tex  Titleback.tex  Titlepage.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  classicthesis-config.tex  im.bib  manual.tex
iwaki/: CMakeLists.txt  exparser.cc  exparser.h  formula.cc  iwaki.cc  iwaki.h  notes.txt  outputs.cc  recipe.cc
queueio/: CMakeLists.txt  log.h  nlpw_utils.h  queueio.cc  queueio.h
ros/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
ros/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
ros/devel/lib/pkgconfig/: iwaki.pc
ros/devel/share/iwaki/cmake/: iwakiConfig.cmake
ros/src/iwaki/: CMakeLists.txt  package.xml
ros/src/iwaki/msg/: ActionMsg.msg  ActionStatusMsg.msg  ArgSlot.msg  AtomMsg.msg  VarSlot.msg
ros/src/iwaki/src/: console.cpp  generator.cpp  iwakishi.cpp  iwakishi.h  iwakisi.cpp  talker.cpp  text_ui.cpp
soundboard/: CMakeLists.txt  README  README.md  generator.cc  soundboard.cc  soundboard.h  text_ui.cc
soundboard/scripts/: default_atoms.xml  initialize_im.georgi.xml
soundboard/scripts/actions/: defaults.xml
soundboard/scripts/recipes/georgi/: heartbeat.xml  how_are_you.xml  how_are_you_and_you.xml  how_are_you_and_you_emptygoal.xml  how_are_you_and_you_forcedgoal.xml
soundboard/src/: CMakeLists.txt  generator.cc  generator_osx.cc  soundboard.cc  soundboard.h  text_ui.cc
soundboard/src/auplay/: main.cpp
